去掉残留信息一次

--- a/mc_upfile/user_list.html
+++ b/mc_upfile/user_list.html
@@ -14,7 +14,7 @@
 格式：用户名|邮件地址|MSN|QQ|办公电话|家庭电话|手机<br/><br/>
 
 user_1|user_1@qq.com|user_1@msn.com|149488951|12184611|18983684611|13717528411<br/>
-模板堂|mobantang@qq.com|mobantang@msn.com|549488955|52184615|58983684615|13757528415<br/>
+云诊断|mobantang@qq.com|mobantang@msn.com|549488955|52184615|58983684615|13757528415<br/>
 user_2|user_2@qq.com|user_2@msn.com|249488952|22184612|28983684612|13727528412<br/>
 ecmoban|ecmoban@qq.com|ecmoban@msn.com|449488954|42184614|48983684614|13747528414<br/>
 user_3|user_3@qq.com|user_3@msn.com|349488953|32184613|38983684613|13737528413<br/>
